adds firebase features

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <title>React App</title>
   </head>
-  <body class="bg-slate-100">
+  <body class="bg-color-default text-white">
     <div id="root"></div>
   </body>
 </html>
