adds replies fearture, WIP

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,7 @@
   </head>
   <body class="bg-color-default text-white">
     <div id="root"></div>
+
+  <script src="./node_modules/preline/dist/preline.js"></script>
   </body>
 </html>
